--- a/404.html
+++ b/404.html
@@ -3,8 +3,28 @@ permalink: /404.html
 layout: base
 search_exclude: true
 ---
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <style>
+      body {
+        margin: 0%;
+      }
+      h1 {
+        color: white;
+        font-size: 3vw;
+        text-align: center;
+        left: 0%;
+        max-width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>404 ERROR: PAGE NOT FOUND!</h1>
+  </body>
+</html>
 
-<style type="text/css" media="screen">
+<!-- <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -22,4 +42,4 @@ search_exclude: true
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
-</div>
+</div> -->
