--- a/404.html
+++ b/404.html
@@ -21,6 +21,9 @@ search_exclude: true
   </head>
   <body>
     <h1>404 ERROR: PAGE NOT FOUND!</h1>
+    <script>
+      console.log("hi");
+    </script>
   </body>
 </html>
 
